@@ -7,7 +7,7 @@ Rgas=286.0;
 rhoref=1;
 aref=300;
 
-Mx=30.0;
+Mx=12.0;
 My=0.0;
 P=10200;
 T=300;
@@ -212,7 +212,7 @@ Init(
 
 Disc(
   NavierStokesPerfect(
-    zetaA1=0.1e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA1=0.03e0;    {conditions the eigenvalue of the A jacobian}
     zetaA2=0.3e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCL(
@@ -220,7 +220,7 @@ Disc(
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.95;
+    AOWENO_gammahi=0.999;
     INTERPOL=INTERPOL_TVD2_VANLEER;
     EIGENVALCOND=EIGENVALCOND_PARENT; 
     POSFILTER=POSFILTER_PARENT;
