@@ -1516,13 +1516,65 @@ void condition_Lambda_plus_minus_Pascal(np_t *np, gl_t *gl, long lp0, long theta
 
 
 void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
-  long flux,spec;
+  long flux,spec,dim,lp1;
+  double ap0,ap1,Vp0,Vp1,Vref,aref,factP,Pstarmax,Pstarmin,fact;
   double lambdaadd1,lambdaadd2,lambdaadd,alphamin,alphamax,alphamass;
   flux_t LUstarp0,LUstarp1,alpha;
+  sqmat_t Lambdap0,Lambdap1;
 
-  condition_Lambda_plus_minus_Pascal(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics,  Lambdaplus, Lambdaminus);
 
-  /* make sure the flux is positivity-preserving in multiple dimensions by conditioning the eigenvalues */
+  /* FIRST, make sure the eigenvalues of the waves are within same order of magnitude as the spectral radius and, 
+     if not, blend them with Steger-Warming Eigenvalues    */
+  ap0=_astar_from_jacvars(jacvarsp0,metrics);
+  ap1=_astar_from_jacvars(jacvarsp1,metrics);
+  Vp0=_Vstar_from_jacvars(jacvarsp0, metrics);
+  Vp1=_Vstar_from_jacvars(jacvarsp1, metrics);
+  find_Lambda_from_jacvars(jacvarsp0, metrics, Lambdap0);
+  find_Lambda_from_jacvars(jacvarsp1, metrics, Lambdap1);
+  aref=max(ap0,ap1);
+  Vref=max(fabs(Vp0),fabs(Vp1));
+  fact=1.0;
+  for (flux=0; flux<nf; flux++){
+    fact=min(fact,(Vref+aref/notzero(jacvarsp0.zetaA2,1e-99))/notzero(max(Lambdaplus[flux][flux],-Lambdaminus[flux][flux]),1e-99));
+  }
+  for (flux=0; flux<nf; flux++){
+    Lambdaplus[flux][flux]=(1.0-fact)*max(0.0,Lambdap0[flux][flux])+fact*Lambdaplus[flux][flux];
+    Lambdaminus[flux][flux]=(1.0-fact)*min(0.0,Lambdap1[flux][flux])+fact*Lambdaminus[flux][flux];
+  }
+
+
+  /* SECOND, add eigenvalue conditioning in vicinity of pressure gradients to prevent carbuncle */
+  lp1=_al(gl,lp0,theta,+1);
+  Pstarmax=max(_Pstar(np[lp0],gl),_Pstar(np[lp1],gl));
+  for (dim=0; dim<nd; dim++){
+    if (dim!=theta){
+      Pstarmax=max(Pstarmax,_Pstar(np[_al(gl,lp0,dim,+1)],gl));
+      Pstarmax=max(Pstarmax,_Pstar(np[_al(gl,lp0,dim,-1)],gl));
+      Pstarmax=max(Pstarmax,_Pstar(np[_al(gl,lp1,dim,+1)],gl));
+      Pstarmax=max(Pstarmax,_Pstar(np[_al(gl,lp1,dim,-1)],gl));
+    }
+  }  
+  Pstarmin=min(_Pstar(np[lp0],gl),_Pstar(np[lp1],gl));
+  for (dim=0; dim<nd; dim++){
+    if (dim!=theta){
+      Pstarmin=min(Pstarmin,_Pstar(np[_al(gl,lp0,dim,+1)],gl));
+      Pstarmin=min(Pstarmin,_Pstar(np[_al(gl,lp0,dim,-1)],gl));
+      Pstarmin=min(Pstarmin,_Pstar(np[_al(gl,lp1,dim,+1)],gl));
+      Pstarmin=min(Pstarmin,_Pstar(np[_al(gl,lp1,dim,-1)],gl));
+    }
+  }  
+  Pstarmin=max(1e-40,Pstarmin);
+  Pstarmax=max(1e-40,Pstarmax);
+
+//  factP=max(0.0,pow(fabs(Pstarmax-Pstarmin)/Pstarmin,1.0));
+  factP=max(0.0,pow(fabs(Pstarmax-Pstarmin)/Pstarmin,1.0)-0.3);
+  for (flux=0; flux<nf; flux++){
+    Lambdaplus[flux][flux]+=(aref+Vref)*jacvarsp0.zetaA1*factP;
+    Lambdaminus[flux][flux]-=(aref+Vref)*jacvarsp0.zetaA1*factP;
+  }
+
+
+  /* THIRD, make sure the flux is positivity-preserving in multiple dimensions by conditioning the eigenvalues */
   find_LUstar_from_jacvars(jacvarsp1, metrics, LUstarp1);
   find_LUstar_from_jacvars(jacvarsp0, metrics, LUstarp0);
 
@@ -1547,14 +1599,12 @@ void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta
     alphamin=min(alphamin,alpha[flux]);
   }
   lambdaadd2=max(0.0,alphamax-alphamin-(alpha[fluxet]+alpha[fluxet-1]));
-
-
   lambdaadd=0.5*max(lambdaadd1,lambdaadd2);
-
   for (flux=fluxet-1; flux<=fluxet; flux++){
     Lambdaplus[flux][flux]+=lambdaadd;
     Lambdaminus[flux][flux]-=lambdaadd;
   }
+
 }
 
 
